* $wgDisableCookieCheck has been removed.
* $wgStatsCacheType has been removed. Set $wgMicroStashType instead.
* $wgJobSerialCommitThreshold has been removed without deprecation,
  it wasn't used anywhere according to codesearch and any setups using this
  config will perform just fine but might be less performant.
* $wgLogoHD, deprecated since 1.35, has been removed. Use $wgLogo instead.
* …

=== New user-facing features in 1.42 ===
* …

=== New features for sysadmins in 1.42 ===
* …

=== New developer features in 1.42 ===
* (T326466) MediaWikiIntegrationTestCase's database and set-up code now avoids
  using dynamic properties, which was causing deprecation warnings in PHP 8.2.
* (T13555) MediaWiki now includes styles that allow more accessible markup for
  section headings. MediaWiki's own HTML output will be changed in the future.
  More information: https://www.mediawiki.org/wiki/Heading_HTML_changes
* (T193472) PHP Notice and Warning errors that are silenced (e.g. by the "@"
  operator, error_reporting directive, or Wikimedia\AtEase) are now logged to
  a new "silenced-error" channel.
* (T347347) The CLI installer accepts a "--with-developmentsettings" argument
  to require the DevelopmentSettings.php file at install time.
* (T350054) MediaWiki's ResourceLoader has been updated to add basic support
  for code-splitting (aka "tree-shaking") when using the Codex component
  library. A ResourceLoader module can now specify a list of "codexComponents"
  in its module defintion and ensure that only the code for those components
  gets sent to the client. More information:
  https://www.mediawiki.org/wiki/Codex#Subset_of_components
* (T345185) The SessionProviderInterface now allows defining providers that
  are exempt from rights checks when auto creating users.
* …

=== External library changes in 1.42 ===

==== New external libraries ====
* Added mck89/peast at v1.16.0.
* Added mediawiki/json-codec at v2.2.1.
* …
