@@ -2039,17 +2039,6 @@ config-schema:
             @note To determine the default model for a new page's main slot, or any slot in general,
             use SlotRoleHandler::getDefaultModel() together with SlotRoleRegistry::getRoleHandler().
             @since 1.21
-    ContentHandlerTextFallback:
-        default: ignore
-        deprecated: 'since 1.37'
-        description: |-
-            How to react if a plain text version of a non-text Content object is requested using
-            ContentHandler::getContentText():
-            * 'ignore': return null
-            * 'fail': throw an MWException
-            * 'serialize': serialize to default format
-            @since 1.21
-            @deprecated since 1.37
     TextModelsToParse:
         default:
             - wikitext
